<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Goals">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:background="@color/cywalkRed"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:text="GOALS"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationY="75sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Personal Goals"
            android:textColor="@color/cywalkRed"
            android:fontFamily="sans-serif-black"
            android:padding="1dp"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cywalkRed"
                android:fontFamily="sans-serif-black"
                android:layout_weight="1"
                android:text="Daily:" />

            <TextView
                android:id="@+id/dailySteps"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cywalkRed"
                android:fontFamily="sans-serif-black"
                android:textAlignment="textEnd"
                android:layout_weight="1" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/dailyprogressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:progressDrawable="@drawable/myprogressbar"
            android:paddingVertical="10sp"
            android:max="10000"
            android:progressTint="#FFEB3B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cywalkRed"
                android:fontFamily="sans-serif-black"
                android:text="Weekly:" />

            <TextView
                android:id="@+id/weeklySteps"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cywalkRed" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/weeklyprogressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:progressDrawable="@drawable/myprogressbar"
            android:paddingVertical="10sp"
            android:max="70000"
            android:progressTint="#FFEB3B" />

        <TextView
            android:id="@+id/orgGoalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Organization Goals"
            android:textColor="@color/cywalkRed"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/orgGoalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/addPlanBtnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <Button
                android:id="@+id/newPlanBtn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="add new plan"
                android:backgroundTint="@color/cywalkRed"
                android:padding="5sp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="5sp"-->
<!--            android:background="@android:color/black" />-->

        <Button
            android:id="@+id/setGoalsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cywalkRed"
            android:text="Edit Daily/Weekly Goals" />

        <LinearLayout
            android:id="@+id/newGoalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/newDailyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:text="New Daily Goal: " />

                <EditText
                    android:id="@+id/new_daily"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:background="@drawable/text_border"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/newWeeklyGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:text="New Weekly Goal: " />

                <EditText
                    android:id="@+id/new_weekly"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:background="@drawable/text_border"
                    android:inputType="number" />
            </LinearLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/cywalkRed"
                android:text="Submit"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navbar"
        app:labelVisibilityMode="labeled"
        app:itemIconTint="@color/cywalkRed"
        app:itemBackground="@color/white"
        app:itemIconSize="50dp"/>
</RelativeLayout>
