<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Header Section with Friends Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:background="@color/cywalkRed"
        android:ems="10"
        android:paddingVertical="15dp"
        android:fontFamily="sans-serif-black"
        android:text="Friends"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <!-- Main content section with friends list and form for adding friends -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationY="75sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Friends"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:id="@+id/friendsTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/newFriendSection"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newFriendTile"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="To send a friend request enter their username"
                android:textColor="@color/black"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/entryUsername"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:padding="5dp"
                android:background="@drawable/text_border"/>
        </LinearLayout>

        <Button
            android:id="@+id/friendSubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/cywalkRed"
            android:text="Send Request"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5sp"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pending Requests"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:id="@+id/requestsTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emptyRequestText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Currently no pending requests"
                android:textColor="@color/black"
                android:textSize="20dp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/cywalkRed"
        android:text="Back"
        android:layout_alignParentBottom="true"/>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
    android:visibility="gone"
    android:id="@+id/profileOverlay">

    <!-- Profile Card layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:src="@drawable/default_avatar" />

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Username: "
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/profileDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Distance: "
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_gravity="center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>

    </RelativeLayout>
