...
    <item
        android:id="@+id/nav_dashboard"
        android:title=""
        android:icon="@drawable/ic_dashboard_foreground" />

    <item
        android:id="@+id/nav_goals"
        android:title=""
        android:icon="@drawable/ic_goals_foreground"/>

    <item
        android:id="@+id/nav_social"
        android:title=""
        android:icon="@drawable/ic_social_foreground"/>


    <item
        android:id="@+id/nav_profile"
...
