...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:padding="16dp">

        <TextView
        android:id="@+id/txt_greeting"
            android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cywalkRed"
        android:textSize="20sp"
        android:text="Welcome Back { USERNAME }!" />
...
